--- a/src/main/resources/assets/raidblocks/lang/en_us.lang
+++ b/src/main/resources/assets/raidblocks/lang/en_us.lang
@@ -5,3 +5,5 @@
 tile.concrete.name=Concrete
 tile.concrete_tile.name=Concrete Tile
 tile.concrete_pillar_side.name=Concrete Pillar
+tile.deepslate_cobble.name=DeepDoupslate
+tile.deepslate.name=Deepdapdoupslate
